# fomws2025aud

./: requirements.txt
src/: CMakeLists.txt
src/chapter/00_grundlagen/00_grundlagen_c/: pointer.c  simplefunctions.c
src/chapter/02_datastructures/: CMakeLists.txt
src/chapter/03_sort/array/: array_sort_exercise_elem.c
src/chapter/05_graph/: 05_01_graph_representation.ipynb  05_02_graph_traversal.ipynb  05_03_graph_paths.ipynb  05_04_graph_mst.ipynb  05_05_graph_directed_graph.ipynb
src/chapter/05_graph/graph/: undirectedgraph.py
src/chapter/06_compression/: 06_dct.ipynb  06_huffman.ipynb  06_lzw.ipynb  06_rle.ipynb  06_waveforms.ipynb
src/chapter/06_compression/dct/: dct.py
src/chapter/06_compression/lzw/: lzw.py
src/snippets/00_grundlagen/: test.c
src/uebungen/circularbuffer/: CMakeLists.txt  circularbuffer.c  circularbuffer_test.c
src/uebungen/uebung01/: 01_02.c  01_03.c  01_04a.c  01_04b.c  01_04c.c  01_04d.c  01_05a.c  01_05b.c  01_05c.c  01_05d.c  CMakeLists.txt
src/uebungen/uebung08/graph_essentials/: graph_representation.ipynb
src/uebungen/uebung09/compression/: lossless.ipynb
src/uebungen/uebung09/graph_grid/: graph_grid.ipynb
src/user/np/: CMakeLists.txt  malloc.c
src/user/np/02_datastructures/array/: CMakeLists.txt  array.c
src/user/np/02_datastructures/circularbuffer/: CMakeLists.txt
src/user/np/02_datastructures/doublelinkedlist/: CMakeLists.txt
src/user/np/02_datastructures/linkedlist/: CMakeLists.txt
src/user/np/02_datastructures/queue/: CMakeLists.txt
src/user/np/Uebung1/: 2a.c  Uebung2.md
(+2 files in other folders)
